--- a/app/views/admin/room.html.erb
+++ b/app/views/admin/room.html.erb
@@ -13,8 +13,16 @@
                     <!-- DataTales Example -->
                     <div class="card shadow mb-4">
                         <div class="card-header py-3">
-                            <h6 class="m-0 font-weight-bold text-primary">All Of Rooms</h6>
+                          <div class="row container">
+                            <div class="col-md-6" style="margin: auto;">
+                                <h6 class="m-0 font-weight-bold text-primary">All Of Rooms</h6>
+                            </div>
+                            <div class="col-md-6">
+                                <button class="btn btn-primary float-right">Ekle</button>
+                            </div>  
+                          </div>
                         </div>
+                        
                         <div class="card-body">
                             <div class="table-responsive">
                                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
@@ -28,29 +36,21 @@
                                             <th>Status</th>
                                         </tr>
                                     </thead>
-                                    <tfoot>
-                                        <tr>
-                                            <th>Number</th>
-                                            <th>Capacity</th>
-                                            <th>Price</th>
-                                            <th>Description</th>
-                                            <th>Photos</th>
-                                            <th>Status</th>
-                                        </tr>
-                                    </tfoot>
+
+
                                     <tbody>
                                     
-                                    <% @rooms.each do |room| %>
-                                        <tr>
-                                            <td><%= room.number %></td>
-                                            <td><%= room.capacity %></td>
-                                            <td><%= room.price %></td>
-                                            <td><%= room.description %></td>
-                                            <td>Photos</td>
-                                            <td><%= room.status %></td>
-                                        </tr>
-                                    <% end %>
-                                         
+                                        <% @rooms.each do |room| %>
+                                            <tr>
+                                                <td><%= room.number %></td>
+                                                <td><%= room.capacity %></td>
+                                                <td><%= room.price %></td>
+                                                <td><%= room.description %></td>
+                                                <td>Photos</td>
+                                                <td><%= room.status %></td>
+                                            </tr>
+                                        <% end %>
+                                            
                                         
                                     </tbody>
                                 </table>
