--- a/app/views/admin/shared/_sidebar.html.erb
+++ b/app/views/admin/shared/_sidebar.html.erb
@@ -1,7 +1,7 @@
 <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="<%= root_path %>">
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-laugh-wink"></i>
                 </div>
@@ -13,7 +13,7 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
-                <a class="nav-link" href="index.html">
+                <a class="nav-link" href="<%= root_path %>">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Ana Sayfa</span></a>
             </li>
@@ -28,9 +28,10 @@
 
             <!-- Nav Item - Charts -->
             <li class="nav-item">
-                <a class="nav-link" href="#">
+                <%= link_to(room_path, class: "nav-link") do %>
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span>Oda İşlemleri</span></a>
+                <% end %>
             </li>
 
             <!-- Divider -->
