Fixed critical bug in Room model and rubocop bugs fixed.

--- a/app/views/admin/shared/_sidebar.html.erb
+++ b/app/views/admin/shared/_sidebar.html.erb
@@ -1,21 +1,22 @@
 <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="<%= root_path %>">
+            <%= link_to(root_path, class: "sidebar-brand d-flex align-items-center justify-content-center") do %>
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-laugh-wink"></i>
                 </div>
                 <div class="sidebar-brand-text mx-3">My Hotel <sup>1</sup></div>
-            </a>
+            <% end %>
 
             <!-- Divider -->
             <hr class="sidebar-divider my-0">
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
-                <a class="nav-link" href="<%= root_path %>">
+                <%= link_to(root_path, class: "nav-link") do %>
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Ana Sayfa</span></a>
+                <% end %>
             </li>
 
             <!-- Divider -->
