--- a/app/views/admin/room.html.erb
+++ b/app/views/admin/room.html.erb
@@ -18,7 +18,8 @@
                                 <h6 class="m-0 font-weight-bold text-primary">All Of Rooms</h6>
                             </div>
                             <div class="col-md-6">
-                                <button class="btn btn-primary float-right">Ekle</button>
+                                <%= button_to "Ekle", room_new_path, method: :get, class: "btn btn-primary float-right" %>
+                                
                             </div>  
                           </div>
                         </div>
@@ -46,7 +47,13 @@
                                                 <td><%= room.capacity %></td>
                                                 <td><%= room.price %></td>
                                                 <td><%= room.description %></td>
-                                                <td>Photos</td>
+                                                <td>
+                                            
+                                                    <% room.photos.each do |photo| %>
+                                                        <%= link_to image_tag(room.photo_as_thumbnail(photo)), photo %>
+                                                    <% end %>
+                                            
+                                                </td>
                                                 <td><%= room.status %></td>
                                             </tr>
                                         <% end %>
