All crud operations of the room module have been completed.

--- a/app/views/admin/room.html.erb
+++ b/app/views/admin/room.html.erb
@@ -47,15 +47,20 @@
                                                 <td><%= room.capacity %></td>
                                                 <td><%= room.price %></td>
                                                 <td><%= room.description %></td>
-                                                <td>
-                                            
+                                                <td>                                           
                                                     <% room.photos.each do |photo| %>
-                                                      <% if photo.content_type.in?(%w[image/jpeg image/png])
+                                                      <% if photo.content_type.in?(%w[image/jpeg image/png]) %>
                                                         <%= link_to image_tag(room.photo_as_thumbnail(photo)), photo %>
+                                                      <% end %>
                                                     <% end %>
-                                            
                                                 </td>
                                                 <td><%= room.status %></td>
+                                                <td>
+                                                    <%= button_to "Düzenle", edit_room_path(room.id), method: :get, class: "btn btn-info float-right" %> 
+                                                </td>
+                                                <td>
+                                                    <%= button_to "Sil", delete_room_path(room.id), method: :delete, class: "btn btn-danger float-right" %>
+                                                </td>
                                             </tr>
                                         <% end %>
                                             
