The services model was created. Addition was made in CRUD operations.

--- a/app/views/admin/shared/_sidebar.html.erb
+++ b/app/views/admin/shared/_sidebar.html.erb
@@ -45,9 +45,10 @@
 
             <!-- Nav Item - Tables -->
             <li class="nav-item">
-                <a class="nav-link" href="#">
+            <%= link_to(services_path, class: "nav-link") do %>
                     <i class="fas fa-fw fa-table"></i>
-                    <span>Tables</span></a>
+                    <span>Servisler</span></a>
+                <% end %>
             </li>
 
             <!-- Divider -->
