Fixed the mess in the Room.html file.

--- a/app/views/admin/room.html.erb
+++ b/app/views/admin/room.html.erb
@@ -1,13 +1,13 @@
 <div class="container">
     <div id="content-wrapper" class="d-flex flex-column">
-        
+
         <!-- Main Content -->
         <div id="content">
+
             <div class="container-fluid">
-                
                 <!-- Page Heading -->
-                <h1 class="h3 mb-2 text-gray-800">Rooms</h1>                
-                    
+                <h1 class="h3 mb-2 text-gray-800">Rooms</h1>
+
                     <!-- DataTales Example -->
                     <div class="card shadow mb-4">
                         <div class="card-header py-3">
@@ -16,7 +16,7 @@
                                 <h6 class="m-0 font-weight-bold text-primary">All Of Rooms</h6>
                             </div>
                             <div class="col-md-6">
-                                <%= button_to "Ekle", room_new_path, method: :get, class: "btn btn-primary float-right" %>                          
+                                <%= button_to "Ekle", room_new_path, method: :get, class: "btn btn-primary float-right" %>                                
                             </div>  
                           </div>
                         </div>
@@ -26,9 +26,12 @@
                                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                                     <thead>
                                         <tr>
-                                            <th>Name</th>
+                                            <th>Number</th>
+                                            <th>Capacity</th>
+                                            <th>Price</th>
                                             <th>Description</th>
-                                            <th>Icon</th>
+                                            <th>Photos</th>
+                                            <th>Status</th>
                                         </tr>
                                     </thead>
 
