Oda durumu düzeltilerek select box olarak güncellendi.

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -106,7 +106,7 @@
                             <!-- Color System -->
                             <div class="row">      
                               <% @rooms.each do |room| %>
-                                <% if room.status == 'Available' %>
+                                <% if room.status == 'Müsait' %>
                                   <div class="col-lg-2 mb-4">
                                     <div class="card bg-success text-white shadow">
                                         <div class="card-body">       
