--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -106,9 +106,9 @@
                             <!-- Color System -->
                             <div class="row">      
                               <% @rooms.each do |room| %>
-                                <% if room.status == 'Müsait' %>
+                                
                                   <div class="col-lg-2 mb-4">
-                                    <div class="card bg-success text-white shadow">
+                                    <div class="<%= room_color(room) %>">
                                         <div class="card-body">       
                                             <div class="text-white large">                                                
                                                    Oda <%= room.number  %>
@@ -116,17 +116,8 @@
                                         </div>
                                     </div>
                                   </div>
-                                <% else %>
-                                    <div class="col-lg-2 mb-4">
-                                    <div class="card bg-danger text-white shadow">
-                                        <div class="card-body">       
-                                            <div class="text-white large">                                                
-                                                   Oda <%= room.number  %>
-                                            </div>
-                                        </div>
-                                    </div>
-                                  </div>
-                                <% end %>  
+                                
+                                 
                               <% end %>
                                 
                             </div>
