The image_type method was created in the room model file and used as validation. Updated error message display.

--- a/app/views/admin/add_room.html.erb
+++ b/app/views/admin/add_room.html.erb
@@ -15,7 +15,17 @@
                           <div class="row container">
                             <div class="col-md-6" style="margin: auto;">
                                 <h6 class="m-0 font-weight-bold text-primary">Oda Bilgileri</h6>
-                                <%= "<div>#{@room.errors.full_messages.first}</div>".html_safe if @room.errors.any? %>   
+                                
+                                  <% if @room.errors.any? %>
+                                    <ul>
+                                      <% @room.errors.full_messages.each do |message| %>
+                                        <div class="alert alert-danger">
+                                          <li><%= message %></li>
+                                        </div> 
+                                      <% end %>
+                                    </ul>
+                                  <% end %>
+                                
                             </div>
                             <div class="col-md-6">
                                 <%= button_to "Geri", room_path, method: :get, class: "btn btn-danger float-right" %>        
