--- a/app/views/services/edit.html.erb
+++ b/app/views/services/edit.html.erb
@@ -15,7 +15,7 @@
                           <div class="row container">
                             <div class="col-md-6" style="margin: auto;">
                                 <h6 class="m-0 font-weight-bold text-primary">Servis Düzenle</h6>
-                                <%= "<div>#{@service.errors.full_messages.first}</div>".html_safe if @service.errors.any? %>   
+                                <%= render 'layouts/errors' %>   
                             </div>
                             <div class="col-md-6">
                                 <%= button_to "Geri", services_path, method: :get, class: "btn btn-danger float-right" %>        
