--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -16,7 +16,7 @@
                                 <h6 class="m-0 font-weight-bold text-primary">All Of Services</h6>
                             </div>
                             <div class="col-md-6">
-                                <%= button_to "Ekle", service_new_path, method: :get, class: "btn btn-primary float-right" %>                          
+                                <%= button_to "Ekle", new_service_path, method: :get, class: "btn btn-primary float-right" %>                          
                             </div>  
                           </div>
                         </div>
@@ -45,7 +45,7 @@
                                                     <%= button_to "Düzenle", edit_service_path(service.id), method: :get, class: "btn btn-info float-right" %> 
                                                 </td>
                                                 <td>
-                                                    <%= button_to "Sil", delete_service_path(service.id), method: :delete, class: "btn btn-danger float-right" %>
+                                                    <%= button_to "Sil", service_path(service.id), method: :delete, class: "btn btn-danger float-right" %>
                                                 </td>
                                             </tr>
                                         <% end %>
