--- a/app/views/services/edit.html.erb
+++ b/app/views/services/edit.html.erb
@@ -25,18 +25,7 @@
                         
                         <div class="card-body">
                             <div class="table-responsive">
-                            <%= form_for @service, url: {action: :update}, html: {'data-turbo' => "false"} do |form| %>
-                                <div class="container">
-                                  <%= form.label "Servis Adı", class: "form-check-label" %>
-                                  <%= form.text_field :name, placeholder: 'Servis Adını Giriniz', class: "form-control" %> <br>
-                                  <%= form.label "Servis Açıklaması", class: "form-check-label" %>
-                                  <%= form.text_field :description, placeholder: 'Servis özelliklerini buraya yazınız', class: "form-control" %> <br>
-                                  <%= form.label "Servis Icon", class: "form-check-label" %>
-                                  <%= form.text_field :icon, placeholder: 'Icon link', class: "form-control" %> <br>
-                                  <br>
-                                  <%= form.submit 'Servis Düzenle', class: "btn btn-primary" %>
-                                </div>
-                              <% end %>
+                              <%= render 'services/shared/form' %>
                             </div>
                         </div>
                     </div>
